--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -346,4 +346,175 @@
     * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/b15ddd29-8f63-471a-b2bd-7f5e9e2cf7a6)
 #### 11.2.3 其他重载运算符
 
+​	两个对象的的相减，或者将一个对象乘以一个因子
+
+* ```c++
+  Time operator-(const Time & t) const;
+  Time operator*(double n) const;
+  ```
+
+（1）类声明头文件：
+
+* 示例：
+
+  * ```c++
+    #pragma once
+    // ch11_07_mytime2.h -- Time class after operator overloading
+    #ifndef CH11_O7_MYTIME2_H_
+    #define CH11_O7_MYTIME2_H_
+    
+    class Time
+    {
+    private:
+    	int hours;
+    	int minutes;
+    public:
+    	Time();
+    	Time(int h, int m = 0);
+    	void AddMin(int m);
+    	void AddHr(int h);
+    	void Reset(int h = 0, int m = 0);
+    	Time operator+(const Time& t) const;
+    	Time operator-(const Time& t) const;
+    	Time operator*(double n) const;
+    	void Show() const;
+    };
+    #endif
+    ```
+
+（2）方法文件：
+
+* 示例：
+
+  * ```c++
+    // ch10_08_mytime2.cpp -- implementing Time methods
+    #include <iostream>
+    #include "ch11_07_mytime2.h"
+    
+    Time::Time()
+    {
+    	hours = minutes = 0;
+    }
+    
+    Time::Time(int h, int m)
+    {
+    	hours = h;
+    	minutes = m;
+    }
+    
+    void Time::AddMin(int m)
+    {
+    	minutes += m;
+    	hours += minutes / 60;
+    	minutes %= 60;
+    }
+    
+    void Time::AddHr(int h)
+    {
+    	hours += h;
+    }
+    
+    void Time::Reset(int h, int m)
+    {
+    	hours = h;
+    	minutes = m;
+    }
+    
+    Time Time::operator+(const Time& t) const
+    {
+    	Time sum;
+    	sum.minutes = minutes + t.minutes;
+    	sum.hours = hours + t.hours + sum.minutes / 60;
+    	sum.minutes %= 60;
+    	return sum;
+    }
+    
+    Time Time::operator-(const Time& t) const
+    {
+    	Time diff;
+    	int tot1, tot2;
+    	tot1 = t.minutes + 60 * t.hours;
+    	tot2 = minutes + 60 * hours;
+    	diff.minutes = (tot2 - tot1) % 60;
+    	diff.hours = (tot2 - tot1) / 60;
+    	return diff;
+    }
+    
+    Time Time::operator*(double mult) const
+    {
+    	Time result;
+    	long totalminutes = hours * mult * 60 + minutes + mult;
+    	result.hours = totalminutes / 60;
+    	result.minutes = totalminutes % 60;
+    	return result;
+    }
+    
+    void Time::Show() const
+    {
+    	std::cout << hours << " hours, " << minutes << " minutes";
+    }
+    ```
+
+（3）使用类文件：
+
+* 示例：
+
+  * ```c++
+    // ch11_09_usetime2.cpp -- using the first draft of the Time class
+    // compile usetime2.cpp and mytime2.cpp together
+    
+    #include <iostream>
+    #include "ch11_07_mytime2.h"
+    
+    int main()
+    {
+    	using std::cout;
+    	using std::endl;
+    	Time weeding(4, 35);
+    	Time waxing(2, 47);
+    	Time total;
+    	Time diff;
+    	Time adjusted;
+    
+    	cout << "weeding time = ";
+    	weeding.Show();
+    	cout << endl;
+    
+    	cout << "waxing time = ";
+    	waxing.Show();
+    	cout << endl;
+    
+    	cout << "total work time = ";
+    	total = weeding + waxing;
+    	total.Show();
+    	cout << endl;
+    
+    	diff = weeding - waxing;
+    	cout << "weeding time - waxing time = ";
+    	diff.Show();
+    	cout << endl;
+    
+    	adjusted = total * 1.5;
+    	cout << "adjusted work time = ";
+    	adjusted.Show();
+    	cout << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    weeding time = 4 hours, 35 minutes
+    waxing time = 2 hours, 47 minutes
+    total work time = 7 hours, 22 minutes
+    weeding time - waxing time = 1 hours, 48 minutes
+    adjusted work time = 11 hours, 3 minutes
+    ```
+
+
+
+### 11.3 友元
+
 
