--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -517,4 +517,27 @@
 
 ### 11.3 友元
 
+（1）3种友元形式：友元函数、友元类、友元成员函数。本章重点介绍友元函数。
 
+（2）需要友元的原因：
+
+* 在为重载二元运算符时（带两个参数的运算符）常常需要友元。例如*乘法运算符，调用对象和放大倍数相乘，讲究这两个操作数的位置，只有调用对象在右，倍数在左时才可使用。详情见P391。
+
+* 解决办法：非成员函数——不由对象调用，它使用的所有值（包括对象）都是显式参数。
+
+  * 这样就能够将下面两个语句匹配：
+
+    * ```c++
+      A = 2.75 * B;
+      A = operator*(2.5, B);
+      ```
+
+    * 该函数原型如下：
+
+    * ```c++
+      Time operator*(double m, const Time & t);
+      ```
+
+* （3）友元函数是一类特殊的非成员函数，它可以访问类的私有成员。
+
+#### 11.3.1 创建友元
