--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -538,6 +538,8 @@
       Time operator*(double m, const Time & t);
       ```
 
-* （3）友元函数是一类特殊的非成员函数，它可以访问类的私有成员。
+（3）友元函数是一类特殊的非成员函数，它可以访问类的私有成员。
 
 #### 11.3.1 创建友元
+
+
