--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -540,6 +540,60 @@
 
 （3）友元函数是一类特殊的非成员函数，它可以访问类的私有成员。
 
+### 11.3 友元
+
+（1）3种友元形式：友元函数、友元类、友元成员函数。本章重点介绍友元函数。
+
+（2）需要友元的原因：
+
+* 在为重载二元运算符时（带两个参数的运算符）常常需要友元。例如*乘法运算符，调用对象和放大倍数相乘，讲究这两个操作数的位置，只有调用对象在右，倍数在左时才可使用。详情见P391。
+
+* 解决办法：非成员函数——不由对象调用，它使用的所有值（包括对象）都是显式参数。
+
+  * 这样就能够将下面两个语句匹配：
+
+    * ```c++
+      A = 2.75 * B;
+      A = operator*(2.5, B);
+      ```
+
+    * 该函数原型如下：
+
+    * ```c++
+      Time operator*(double m, const Time & t);
+      ```
+
+（3）友元函数是一类特殊的非成员函数，它可以访问类的私有成员。
+
 #### 11.3.1 创建友元
 
+Step1：创建友元函数的第一步是将其**原型**放在类声明中，并在原型声明前加上关键字friend：
+
+* ```c++
+  friend Time operator*(double m, const Time & t);
+  ```
+
+* Attention❗
+
+  * 虽然operator*()函数在类声明中声明的，但它不是成员函数，因此不能使用成员运算符来调用；
+  * 虽然operator*()函数不是成员函数，但它与成员函数的访问权限相同。
+
+Step2：编写函数定义：
+
+* 因为它不是成员函数，所以不要使用Time::限定符，另外不要在定义中使用关键字friend：
+
+  * ```c++
+    Time operator*(double m, const Time & t)
+    {
+        Time result;
+        long totalminutes = t.hours * mult * 60 + t.minutes + mult;
+    	result.hours = totalminutes / 60;
+    	result.minutes = totalminutes % 60;
+    	return result;
+    }
+    ```
+
+In addition：可以按照P392的方式对上述定义修改，即可将这个友元函数编写为非友元函数。（提示:如果要为类重载运算符，并将非类的项作为其第一个操作数，则可以用友元函数来反转操作数的顺序。）
+
+#### 11.3.2 常用的友元：重载<<运算符
 
