--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1039,3 +1039,67 @@ String * favorite = new String(sayings[choice]);
 
 #### 12.5.1 再谈 new 和 delete
 
+上述工程在两个层次上使用了 new 和 delete：
+
+* 1、使用 new 为创建的每一个对象的名称字符串分配存储空间，这是在构造函数中进行的，因此析构函数使用 delete 来释放这些内存。因为字符串是一个字符数组，所以析构函数使用的是带中括号的 delete。这样，当对象被释放时，用于存储字符串的内容将被自动释放。
+
+  * ```c++
+    // class methods
+    // construct StringBad from C string
+    String::String(const char* s)
+    {
+    	len = std::strlen(s);
+    	str = new char[len + 1];
+    	std::strcpy(str, s);
+    	num_strings++;
+    }
+    
+    String::String()
+    {
+    	len = 4;
+    	str = new char[1];
+    	str[0] = '\0';
+    	num_strings++;
+    }
+    
+    String::String(const String& st)
+    {
+    	num_strings++;
+    	len = st.len;
+    	str = new char[len + 1];
+    	std::strcpy(str, st.str);
+    }
+    
+    String::~String()
+    {
+    	--num_strings;
+    	delete[] str;
+    }
+    ```
+
+* 2、使用 new 来为整个对象分配内存：
+
+  * ```c++
+    String* favorite = new String(sayings[choice]);
+    cout << "My favorite saying:\n" << *favorite << endl;
+    delete favorite;
+    ```
+
+  * 这不是为要存储的字符串分配内存，而是为对象分配内存；也就是说，为保存字符串地址的 str 指针和 len 成员分配内存（程序并没有给 num_string 成员分配内存，这是因为 num_string 成员是静态成员，它独立于对象被保存）。
+
+  * 创建对象将调用构造函数，后者分配用于保存字符串的内存，并将字符串的地址赋给 str。
+
+  * 然后当程序不再需要该对象时，使用 delete删除它。对象是单个的，因此程序使用不带中括号的 delete。
+
+  * 与前面相同，这将只释放用于保存 str 指针和 len 成员的空间，并不释放 str 指向的内存，而该任务将由析构函数完成。
+
+  * ![image-20231212210854965](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231212210854965.png)
+
+* 析构函数将被调用的情况，见P454
+
+  * 如果对象是动态变量，则当执行完定义该对象的程序块时，将调用该对象的析构函数。
+  * 如果对象时静态变量，则在程序结束时将调用对象的析构函数。
+  * 如果对象是 new 创建的，则仅当您显式使用 delete 删除对象时，其析构函数才会被调用。
+
+#### 12.5.2 指针和对象小结
+
