--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1093,7 +1093,8 @@ String * favorite = new String(sayings[choice]);
 
   * 与前面相同，这将只释放用于保存 str 指针和 len 成员的空间，并不释放 str 指向的内存，而该任务将由析构函数完成。
 
-  * ![image-20231212210854965](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231212210854965.png)
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/2475707c-f450-4cea-8c5e-db6f4cca9f73)
+
 
 * 析构函数将被调用的情况，见P454
 
