--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1104,3 +1104,52 @@ String * favorite = new String(sayings[choice]);
 
 #### 12.5.2 指针和对象小结
 
+使用对象指针需注意几点：
+
+![image-20231212211952951](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231212211952951.png)
+
+* 使用常规表示法来声明指向对象的指针：
+
+  * ```c++
+    String * glamour;
+    ```
+
+* 可以将指针初始化为指向已有的对象：
+
+  * ```c++
+    String * first = &sayings[0];
+    ```
+
+* 可以使用 new 来初始化指针，这将创建一个新的对象：
+
+  * ```c++
+    String * favorite = new String(sayings[choice]);
+    ```
+
+* 对类使用 new 将调用相应的类构造函数来初始化新创建的对象：
+
+  * ```c++
+    // invokes default constructor
+    String * gleep = new String;
+    // invokes the String(const char *)constructor
+    String * glop = new String("my my my");
+    // invokes the String(const String &)constructor
+    String * favorite = new String(sayings[choice]);
+    ```
+
+  * ![image-20231212212020041](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231212212020041.png)
+
+* 可以使用->运算符通过指针访问类对象：
+
+  * ```c++
+    if (sayings[i].length() < shortest->length());
+    ```
+
+* 可以对对象指针应用解除引用运算符（*）来获得对象：
+
+  * ```c++
+    if (sayings[i] < *first)
+        first = &sayings[i];
+    ```
+
+#### 12.5.3 再谈定位 new 运算符
