--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1106,7 +1106,7 @@ String * favorite = new String(sayings[choice]);
 
 使用对象指针需注意几点：
 
-![image-20231212211952951](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231212211952951.png)
+![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/cce5f65a-45e8-43c0-ae7c-8705edb1154a)
 
 * 使用常规表示法来声明指向对象的指针：
 
@@ -1137,7 +1137,7 @@ String * favorite = new String(sayings[choice]);
     String * favorite = new String(sayings[choice]);
     ```
 
-  * ![image-20231212212020041](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231212212020041.png)
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/25c78551-7e65-4f13-9f23-fc2c2c3ee8e1)
 
 * 可以使用->运算符通过指针访问类对象：
 
