--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1153,4 +1153,216 @@ String * favorite = new String(sayings[choice]);
     ```
 
 #### 12.5.3 再谈定位 new 运算符
-20231213 no study
+
+定位 new 运算符能够让您在分配内存时能够指定内存位置，在定位 new 运算符用于对象时的情况有些不同。
+
+* 示例：
+
+  * ```c++
+    // ch12_08_placenew1.cpp -- new, placement new, no delete
+    #include <iostream>
+    #include <string>
+    #include <new>
+    using namespace std;
+    const int BUF = 512;
+    
+    class JustTesting
+    {
+    private:
+    	string words;
+    	int number;
+    public:
+    	JustTesting(const string& s = "Just Testing", int n = 0)
+    	{
+    		words = s;
+    		number = n;
+    		cout << words << " constructed\n";
+    	}
+    	~JustTesting() { cout << words << " destroyed\n"; }
+    	void Show() const { cout << words << ", " << number << endl; }
+    };
+    
+    int main()
+    {
+    	char* buffer = new char[BUF];
+    
+    	JustTesting* pc1, * pc2;
+    
+    	pc1 = new (buffer) JustTesting;		// place object in buffer
+    	pc2 = new JustTesting("Heap1", 20);	// place object on heap
+    
+    	cout << "Memory block addresses:\n" << "buffer: "
+    		<< (void*)buffer << "     heap: " << pc2 << endl;
+    	cout << "Memory contents:\n";
+    	cout << pc1 << ": ";
+    	pc1->Show();
+    	cout << pc2 << ": ";
+    	pc2->Show();
+    
+    	JustTesting* pc3, * pc4;
+    	pc3 = new (buffer) JustTesting("Bad Idea", 6);
+    	pc4 = new JustTesting("Heap2", 10);
+    
+    	cout << "Memory contents:\n";
+    	cout << pc3 << ": ";
+    	pc3->Show();
+    	cout << pc4 << ": ";
+    	pc4->Show();
+    
+    	delete pc2;
+    	delete pc4;
+    	delete[] buffer;
+    	cout << "Done\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Just Testing constructed
+    Heap1 constructed
+    Memory block addresses:
+    buffer: 008B29D8     heap: 008ACF18
+    Memory contents:
+    008B29D8: Just Testing, 0
+    008ACF18: Heap1, 20
+    Bad Idea constructed
+    Heap2 constructed
+    Memory contents:
+    008B29D8: Bad Idea, 6
+    008AC4E8: Heap2, 10
+    Heap1 destroyed
+    Heap2 destroyed
+    Done
+    ```
+
+  * 该程序使用 new 运算符创建了一个512字节的内存缓冲区，然后使用 new 运算符在堆中创建两个JustTesting对象，并使用定位 new 运算符在内存缓冲区中创建两个 JustTesting 对象。最后，它使用 delete 来释放使用 new 分配的内存。
+
+  * 两个问题：
+
+    * 1、在创建第二个对象时，定位 new 运算符使用一个新对象来覆盖用于第一个对象的内存单元。如果类动态地为其成员分配内存，这将引发问题。
+
+      * 解决办法：要使用不同的内存单元，需要提供两个位于缓冲区不同的地址，并确保这两个内存单元不重叠：
+
+        * ```c++
+          pc1 = new (buffer) JustTesting;
+          pc3 = new (buffer + sizeof (JustTesting)) JustTesting("Better Idea", 6);
+          ```
+
+        * 其中pc3相对于pc1的偏移量为JustTesting对象的大小。
+
+    * 2、将 delete 用于 pc2和pc4时，将自动调用为pc2和pc4指向地对象调用析构函数；然而，将delete[] 用于buffer时，不会为使用定位 new 运算符创建地对象调用析构函数。
+
+      * 解决办法：如果使用定位 new 运算符来为对象分配内存，必须确保其析构函数被调用。
+
+      * ```c++
+        //对于在堆中创建的对象，可以这样
+        delete pc2;
+        //但不能这样做
+        delete pc1;
+        delete pc3;
+        //因为delete可与常规new运算符配合使用，但不能与定位new运算符配合使用。
+        ```
+
+      * delete [] buffer 释放使用常规 new 运算符分配的整个内存块，但它没有为定位 new 运算符在该内存块中创建的对象调用析构函数，见P458。
+
+        * 解决方案：显式地使用定位 new 运算符创建的对象调用析构函数：
+
+          * ```c++
+            pc3->~JustTesting();
+            pc1->~JustTesting();
+            ```
+
+          * 需要注意的一点是正确的删除顺序。对于使用定位 new 运算符创建的对象，应以与创建顺序相反的顺序进行删除。原因在于，晚创建的对象可能依赖于早创建的对象。另外，又当所有对象都被销毁后，才能释放用于存储这些对象的缓冲区。
+
+* 改进后示例：
+
+  * ```c++
+    // ch12_09_placenew2.cpp -- new, placement new, no delete
+    #include <iostream>
+    #include <string>
+    #include <new>
+    using namespace std;
+    const int BUF = 512;
+    
+    class JustTesting
+    {
+    private:
+    	string words;
+    	int number;
+    public:
+    	JustTesting(const string& s = "Just Testing", int n = 0)
+    	{
+    		words = s;
+    		number = n;
+    		cout << words << " constructed\n";
+    	}
+    	~JustTesting() { cout << words << " destroyed\n"; }
+    	void Show() const { cout << words << ", " << number << endl; }
+    };
+    
+    int main()
+    {
+    	char* buffer = new char[BUF];
+    
+    	JustTesting* pc1, * pc2;
+    
+    	pc1 = new (buffer) JustTesting;		// place object in buffer
+    	pc2 = new JustTesting("Heap1", 20);	// place object on heap
+    
+    	cout << "Memory block addresses:\n" << "buffer: "
+    		<< (void*)buffer << "     heap: " << pc2 << endl;
+    	cout << "Memory contents:\n";
+    	cout << pc1 << ": ";
+    	pc1->Show();
+    	cout << pc2 << ": ";
+    	pc2->Show();
+    
+    	JustTesting* pc3, * pc4;
+    // fix placement new location
+    	pc3 = new (buffer + sizeof (JustTesting)) JustTesting("Better Idea", 6);
+    	pc4 = new JustTesting("Heap2", 10);
+    
+    	cout << "Memory contents:\n";
+    	cout << pc3 << ": ";
+    	pc3->Show();
+    	cout << pc4 << ": ";
+    	pc4->Show();
+    
+    	delete pc2;
+    	delete pc4;
+    // explicitly destroy placement new objects
+    	pc3->~JustTesting();
+    	pc1->~JustTesting();
+    	delete[] buffer;
+    	cout << "Done\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Just Testing constructed
+    Heap1 constructed
+    Memory block addresses:
+    buffer: 00F22C10     heap: 00F1CF18
+    Memory contents:
+    00F22C10: Just Testing, 0
+    00F1CF18: Heap1, 20
+    Better Idea constructed
+    Heap2 constructed
+    Memory contents:
+    00F22C30: Better Idea, 6
+    00F1C4E8: Heap2, 10
+    Heap1 destroyed
+    Heap2 destroyed
+    Better Idea destroyed
+    Just Testing destroyed
+    Done
+    ```
+
+
+
+### 12.6 复习各种技术
