--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1366,3 +1366,73 @@ String * favorite = new String(sayings[choice]);
 
 
 ### 12.6 复习各种技术
+
+#### 12.6.1 重载<<运算符
+
+要重新定义<<运算符，以便将它和cout一起用来显示对象的内容，则需要定义下面的友元运算符函数：
+
+* ```c++
+  ostream & operator<<(ostream & os, const c_name & obj)
+  {
+      os << ...;
+      return os;
+  }
+  ```
+
+* 其中 c_name 是类名。如果该类提供了能够返回所需内容的公有方法，则可在运算符函数中使用这些法，这样便不用将它们设置为友元函数了。
+
+#### 12.6.2 转换函数
+
+要将单个值转换为类类型，需要创建原型如下的类构造函数：
+
+* ```c++
+  c_name(type_name value);
+  ```
+
+* c_name：类名，type_name：要转换的类型的名称
+
+要将类转换为其他类型，需要创建原型如下的类成员函数：
+
+* ```c++
+  operator type_name();
+  ```
+
+* 虽然该函数没有声明返回类型，但应返回所需类型的值。
+
+* 使用转换函数时要小心。可以在声明构造函数时使用关键字 explicit，以防止它被用于隐式转换。
+
+#### 12.6.3 其构造函数使用new的类
+
+如果类使用new运算符来分配类成员指向的内存，在设计时应采取一些预防措施：
+
+* 对于指向的内存是由 new 分配的所有类成员，都应在类的析构函数中对其使用 delete，该运算将释放分配的内存。
+
+* 如果析构函数通过对指针类成员使用 delete 来释放内存，则每个构造函数都应当使用 new 来初化指针，或将它设置为空指针。
+
+* 构造函数中要么使用new[]，要么使用new，而不能混用。如果构造函数使用的是 new[]]，则析函数应使用 delete[]]；如果构造函数使用的是new，则析构函数应使用 delete。
+
+* 应定义一个分配内存(而不是将指针指向已有内存)的复制构造函数。这样程序将能够将类对初始化为另一个类对象。这种构造函数的原型通常如下：
+
+  * ```C++
+    className(const className &)
+    ```
+
+* 应定义一个重载赋值运算符的类成员函数，其函数定义如下(其中 c_pinter 是 c_name 的类成员，类型为指向 type_name 的指针)。下面的示例假设使用 new[] 来初始化变量 c_pointer：
+
+  * ```c++
+    c_name & c_name::operator=(const c_name & cn)
+    {
+        if (this == & cn)
+            return *this;
+        delete [] c_pointer;
+        c_pointer = new type_name[size];
+        ...
+        return *this;
+    }
+    ```
+
+
+
+### 12.7 队列模拟
+
+
