--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1435,4 +1435,12 @@ String * favorite = new String(sayings[choice]);
 
 ### 12.7 队列模拟
 
+* 队列：可以存储有序的项目序列。
+  * 新项目被添加在队尾，并可以删除队首的项目。
+  * 队列优点像栈，但栈在同一端进行添加和删除。
+  * 因此栈：后进先出（LIFO，last-in，first-out），队列先进先出（FIFO，first-in，first-out）
+  * 概念上看，队列好比是收款台或ATM前面排的队
+* 队列模拟方案：（队列中的项目是顾客，Heather银行的代表介绍见P461，设计一个表示顾客的类；编写一个程序来模拟顾客和队列之间的交互）
+  * ![image-20231214160027254](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231214160027254.png)
 
+#### 12.7.1 队列类
