--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1444,3 +1444,197 @@ String * favorite = new String(sayings[choice]);
   * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/37b79b8b-63cf-4d55-b64a-59e2ce701248)
 
 #### 12.7.1 队列类
+
+首先设计一个Queue类，队列特征如下：
+
+* 队列存储有序的项目序列；
+* 队列所能容纳的项目数有一定的限制；
+* 应当能够创建空队列；
+* 应当能够检查队列是否为空；
+* 应当能够检查队列是否是满的；
+* 应当能够在队尾添加项目；
+* 应当能够从队首删除项目；
+* 应当能够确定队列中的项目数。
+
+设计类是，需要开发共有接口和私有接口：
+
+**1、Queue类的接口**
+
+* Queue类的共有接口：
+
+  * ``` c++
+    class Queue
+    {
+        enum {Q_SIZE = 10};
+     private:
+     // private representation to be developed later
+     public:
+        Queue(int qs = Q_SIZE);
+        ~Queue();
+        bool isempty() const;
+        bool isfull() const;
+        int queuecount() const;
+        bool enqueue(const Item &item);
+        bool dequeue(Item &item);
+    };
+    ```
+
+  * 构造函数创建一个空队列。默认情况下，队列最多可存储 10 个项目，但是可以用显式初始化参数覆盖该默认值：
+
+    * ```c++
+      Queue line1;
+      Queue line2(20);
+      ```
+
+  * 使用队列时，可以使用typedef来定义Item。
+
+**2、Queue类的实现**
+
+确定接口后，便可以实现它。
+
+* 首先，需要确定如何表示队列数据：
+
+  * 一种方法是使用new动态分配一个数组，它包含所需的元素数。然而，对于队列操作来说，数组并不合适。见P462，数组实现循环变化较难。
+
+  * 另一种方法是使用链表，能够很好地满足队列的要求。
+
+    * 链表由节点序列构成，每一个节点中都包含要保存到链表中的信息以及一个指向下一个节点的指针。
+
+    * 对于这里的队列来说，数据部分都是一个一个Item类型的值，因此可以使用下面的结构来表示节点：
+
+      * ```c++
+        Struct Node
+        {
+            Item item;
+            struct Node * next;
+        };
+        ```
+
+    * 如下图所示是一个单向链表，因为每个节点都只包含一个指向其他节点的指针。
+
+      * ![image-20231214170101984](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231214170101984.png)
+      * 通常，链表最后一个节点中的指针被设置为NULL或0，以指出后面没有节点了。
+      * 见P462。如何跟踪链表节点：
+        * ![image-20231214170528677](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231214170528677.png)
+
+* 其次对类的私有部分进行声明与下面类似：
+
+  * ```c++
+    class Queue
+    {
+    private:
+    // class scope definitions
+        // Node is a nested structure definition local to this class
+        struct Node { Item item; struct Node * next; };
+        enum { Q_SIZE = 10 };
+    // private class members
+        Node * front;
+        Node * rear;
+        int items;
+        const int qsize;
+        ...
+    public:
+        ...
+    };
+    ```
+
+  * 上述声明使用了 C++ 的一项特性：在类中套结构或类声明。
+
+    * 通过将 Node 声明放在 Oueue 类中可以使其作用域为整个类。
+    * 也就是说，Node 是这样一种类型：可以使用它来声明类成员，也可以将它作为类方法中的类型名称，但只能在类中使用。
+    * 这样，就不必担心该 Node 声明与某些全局声明或其他类中声明的 Node 发生冲突。有些较老的编译器不支持嵌套的结构和类，如果您的编译器是这样的，则必须将 Node结构定义为全局的，将其作用域设置为整个文件。
+    * 详情见P463。
+
+**3、类方法**
+
+* 类构造函数应提供类成员的值。而在本例中，队列最初是空的，因此队首和队尾指针都设置为NULL或0或nullptr，并将items设置为0。另外，还应将队列的最大长度qsize设置为构造函数参数qs的值。（P464有无法正常运行案例）
+
+  * 对于const数据成员，必须在执行到构造函数体之前，即创建对象时进行初始化：
+
+    * 成员初始化列表：由逗号分割的初始化列表组成（前面带括号）。它位于参数列表的右括号之后、函数体左括号之前。
+
+      * 如果数据成员名称为mdata，并需要将它初始化为val，则初始化器为mdata(val)：
+
+      * ```c++
+        Queue::Queue(int qs) : qsize(qs)
+        {
+            front = rear = NULL;
+            items = 0;
+        }
+        ```
+
+    * 通常，初值可以是常量或构造函数的参数列表中的参数。这种方法并不限于初始化常量，因此可将Queue构造函数写成如下：
+
+      * ```c++
+        Queue::Queue(int qs) : qsize(qs), front(NULL), rear(NULL), items(0)
+        {
+            
+        }
+        ```
+
+      * ❗只有构造函数可以使用这种初始化列表语法。
+
+        * 对于const类成员，必须使用这种语法。
+
+        * 对于被声明为引用的类成员，也必须使用这种语法。
+
+          * ```c++
+            class Agency {...};
+            class Agent
+            {
+            private:
+                Agency & belong;
+                ...
+            };
+            Agent::Agent(Agency & a) : belong(a) {...}
+            ```
+
+          * 这是因为引用与const数据类似，只能在被创建时进行初始化。
+
+    * 成员初始化列表语法详情见P464。
+
+  * C++的类内初始化：
+
+    * 允许以更直观的方式进行初始化，与在构造函数中使用**成员初始化列表**等价：
+
+      * ```c++
+        class Classy
+        {
+            int mem1 = 10;
+            const int mem2 = 20;
+            //...
+        };
+        //等价于
+        Classy::Classy() : mem1(10), mem2(20) {...}
+        ```
+
+* isempty()、isfull()和queuecount()的代码都非常简单：
+
+  * 如果items为0，则队列为空；如果items等于qsize，则队列为满。因此要知道队列中的项目数，返回items的值即可。
+
+* 将项目添加到队尾（入队）的方法：
+
+  * ```c++
+    bool Queue::enqueue(const Item & item)
+    {
+        if (isfull())
+            return false;
+        Node * add = new Node;	// create node
+    // no failure, new throws std::bad_alloc excption
+        add->item = item;
+        add->next = NULL;
+        items++;
+        if (front == NULL)
+            front = add;
+        else
+            rear->next = add;
+        rear = add;
+        return ture;
+    }
+    ```
+
+  * ![image-20231214194334553](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231214194334553.png)
+
+#### 12.7.2 Customer 类
+
+#### 12.7.3 ATM模拟
