--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1633,7 +1633,7 @@ String * favorite = new String(sayings[choice]);
     }
     ```
 
-  * ![image-20231214194334553](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231214194334553.png)
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/3e9e5ef4-0a25-42d8-8e39-f5275d3b0eb5)
 
 #### 12.7.2 Customer 类
 
