--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1512,7 +1512,7 @@ String * favorite = new String(sayings[choice]);
 
     * 如下图所示是一个单向链表，因为每个节点都只包含一个指向其他节点的指针。
 
-      * ![image-20231214170101984](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231214170101984.png)
+      * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/8aa01929-e718-41de-91e4-296fcac01cd7)
       * 通常，链表最后一个节点中的指针被设置为NULL或0，以指出后面没有节点了。
       * 见P462。如何跟踪链表节点：
         * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/e1343fda-437f-4d04-8ffa-856f210f2ff8)
