--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1612,7 +1612,7 @@ String * favorite = new String(sayings[choice]);
 
   * 如果items为0，则队列为空；如果items等于qsize，则队列为满。因此要知道队列中的项目数，返回items的值即可。
 
-* 将项目添加到队尾（入队）的方法：
+* * 1、将项目添加到队尾（入队）的方法：
 
   * ```c++
     bool Queue::enqueue(const Item & item)
@@ -1633,7 +1633,81 @@ String * favorite = new String(sayings[choice]);
     }
     ```
 
-  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/3e9e5ef4-0a25-42d8-8e39-f5275d3b0eb5)
+  * 方法需要经过的5个阶段：
+
+    * ![ ](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231214194334553.png)
+
+* 2、删除队首项目（出队）也需要多个步骤：
+
+  * ```c++
+    bool Queue::dequeue(Item & item)
+    {
+        if (front == NULL)
+            return false;
+        item = front->item;
+        items--;
+        Node * temp = front;
+        front = front->next;
+        delete temp;
+        if (items == 0)
+            rear = NULL;
+        return ture;
+    }
+    ```
+
+  * 步骤如图所示：
+
+    * ![image-20231219165433316](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231219165433316.png)
+
+    * 其中第4部需要其他方法，原因是dequeue( )方法可以清楚节点，但是不能保证队列在到期时为空，见P468。因此类需要一个显式析构函数——该函数删除剩余的所有节点：
+
+      * ```c++
+        Queue::~Queue()
+        {
+            Node * temp;
+            while (front != NULL) // while queue is not yet empty
+            {
+                temp = front;		// save address of front item
+                front = front->next; // reset pointer to next item
+                delete temp;		// delete former front
+            }
+        } 
+        ```
+
+      * 它从链表头开始，依次删除其中的每个节点
+
+* 使用 new 的类通常需要包含显式复制构造函数和执行深度复制的赋值运算符，这个例子也是如此：
+
+  * 默认的成员赋值不合适：原因见P468，将项目添加到复制的Queue对象中，将会修改共享的列表；气质只有副本的尾指针得到了更新，从原始对象角度来看，将损坏链表。
+
+  * 解决方法：将所需的方法定义为伪私有方法
+
+    * ```c++
+      class Queue
+      {
+      private:
+          Queue(const Queue & q) : qsize(0) { } // preemptive definition
+          Queue & operator=(const Queue & q) { return *this; }
+      //....
+      };
+      ```
+
+    * 作用1：
+
+      * 避免了本来将自动生成的默认方法定义；
+
+    * 作用2：
+
+      * 因为这些方法是私有的，所以不能呗广泛使用。
+
+    * 也就是说，如果 nip 和 tuck 是Queue对象，则编译器不允许
+
+      * ```c++
+        Queue snick(nip);	// not allowed
+        tuck = nip;		    // not allowed
+        ```
+
+      * 所以，与其将来面对无法预料的运行故障，不如得到一个易于跟踪的编译错误，指出这些方法是不可访问的。另外，在定义其对象不允许被复制的类时，这种方法也很有用。
 
 #### 12.7.2 Customer 类
 
