--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1657,7 +1657,7 @@ String * favorite = new String(sayings[choice]);
 
   * 步骤如图所示：
 
-    * ![image-20231219165433316](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231219165433316.png)
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/c562dbb7-f61a-483d-86b0-b0040e310c95)
 
     * 其中第4部需要其他方法，原因是dequeue( )方法可以清楚节点，但是不能保证队列在到期时为空，见P468。因此类需要一个显式析构函数——该函数删除剩余的所有节点：
 
