--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1635,7 +1635,7 @@ String * favorite = new String(sayings[choice]);
 
   * 方法需要经过的5个阶段：
 
-    * ![ ](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231214194334553.png)
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/426d90e1-8413-47b0-808c-1beb0032cccf)
 
 * 2、删除队首项目（出队）也需要多个步骤：
 
