--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1711,5 +1711,165 @@ String * favorite = new String(sayings[choice]);
 
 #### 12.7.2 Customer 类
 
-#### 12.7.3 ATM模拟
+即客户类，通常ATM客户有很多属性：姓名、账户和账户结余。这里模拟需要使用的唯一一个属性是客户何时进入队列以及客户交易所需的时间：
 
+* 当模拟生成新客户时，程序将创建一个新的客户对象，并在其中存储客户的到达时间以及一个随机生成的交易时间。当客户到达队首时程序将记录此时的时间，并将其与进入队列的时间相减，得到客户的等候时间。
+
+* ```c++
+  class Customer
+  {
+  private:
+      long arrive;	// arrival time for customer
+      int processtime;// processing time for customer
+  public:
+      Customer() { arrive = processtime = 0; }
+      void set(long when);
+      long when() const { return arrive; }
+      int ptime() const { return processtime; }
+  };
+  
+  void Customer::set(long when)
+  {
+      processtime = std::rand() % 3 + 1;
+      arrive = when;
+  }
+  ```
+
+* 默认构造函数创建一个空客户。set( )成员函数将到达时间设置为参数，并将处理时间设置为 1~3 中的个随机值。
+
+程序清单：
+
+* 示例1：
+
+  * ```c++
+    #pragma once
+    // ch12_10_queue.h -- interface for queue
+    #ifndef CH12_10_QUEUE_H_
+    #define CH12_10_QUEUE_H_
+    // This queue will contain Customer items
+    class Customer
+    {
+    private:
+    	long arrive;
+    	int processtime;
+    public:
+    	Customer() { arrive = processtime = 0; }
+    
+    	void set(long when);
+    	long when() const { return arrive; }
+    	int ptime() const { return processtime; }
+    };
+    
+    typedef Customer Item;
+    
+    class Queue
+    {
+    private:
+    // class scope definitions
+        // Node is a nested structure definition local to this class
+        struct Node { Item item; struct Node* next; };
+        enum { Q_SIZE = 10 };
+    // private class members
+        Node* front;
+        Node* rear;
+        int items;
+        const int qsize;
+        // preemptive definitions to prevent public copying
+        Queue(const Queue& q) : qsize(0) { }
+        Queue& operator=(const Queue& q) { return *this; }
+    public:
+        Queue(int qs = Q_SIZE); // creat queue with a qs limit
+        ~Queue();
+        bool isempty() const;
+        bool isfull() const;
+        int queuecount() const;
+        bool enqueue(const Item& item);
+        bool dequeue(Item& item);
+    };
+    #endif
+    ```
+
+* 示例2：
+
+  * ```c++
+    // ch12_11_queue.cpp -- Queue and Customer methods
+    #include "ch12_10_queue.h"
+    #include <cstdlib>
+    
+    //Queue methods
+    Queue::Queue(int qs) : qsize(qs)
+    {
+    	front = rear = NULL;
+    	items - 0;
+    }
+    
+    Queue::~Queue()
+    {
+        Node* temp;
+        while (front != NULL) // while queue is not yet empty
+        {
+            temp = front;		// save address of front item
+            front = front->next; // reset pointer to next item
+            delete temp;		// delete former front
+        }
+    }
+    
+    bool Queue::isempty() const
+    {
+        return items == 0;
+    }
+    
+    bool Queue::isfull() const
+    {
+        return items == qsize;
+    }
+    
+    int Queue::queuecount() const
+    {
+        return items;
+    }
+    
+    // Add item to queue
+    bool Queue::enqueue(const Item& item)
+    {
+        if (isfull())
+            return false;
+        Node* add = new Node;	// create node
+    // no failure, new throws std::bad_alloc excption
+        add->item = item;
+        add->next = NULL;
+        items++;
+        if (front == NULL)
+            front = add;
+        else
+            rear->next = add;
+        rear = add;
+        return true;
+    }
+    
+    // Place front item into item variable and remove from queue
+    bool Queue::dequeue(Item& item)
+    {
+        if (front == NULL)
+            return false;
+        item = front->item;
+        items--;
+        Node* temp = front;
+        front = front->next;
+        delete temp;
+        if (items == 0)
+            rear = NULL;
+        return true;
+    }
+    
+    //time set to a random value in the range 1 - 3
+    void Customer::set(long when)
+    {
+        processtime = std::rand() % 3 + 1;
+        arrive = when;
+    }
+    ```
+
+
+
+#### 12.7.3 ATM模拟
