--- a/notes/ch12 类和动态内存匹配.md
+++ b/notes/ch12 类和动态内存匹配.md
@@ -1873,3 +1873,204 @@ String * favorite = new String(sayings[choice]);
 
 
 #### 12.7.3 ATM模拟
+
+程序允许用户输入3个数：
+
+* 队列的最大长度；
+* 程序模拟的持续时间（单位为小时）；
+* 平均每小时的客户数。
+
+程序将使用循环——每次循环代表一分钟，在每分钟的循环中，程序将完成如下工作：
+
+* 判断是否来了新的客户。如果来了，并且此时队列未满，则将它添加到队列中，否则拒绝客户入队。
+* 如果没有客户在进行交易，则选取队列的第一个客户。确定该客户的已等待时间，并将 wait_time 计数器设置为新客户所需的处理时间。
+* 如果客户正在处理中，则将 wait_time 计数器减1。
+* 记录各种数据，如获得服务的客户数目、呗拒绝的客户数目、排队等候的累计时间以及累积的队列长度等。
+
+程序将使用下面的函数来确定是否在循环期间有客户到来：
+
+* ```c++
+  bool newcustomer(double x)
+  {
+      return (std::rand() * x / RAND_MAX < 1);
+  }
+  ```
+
+* 值RAND_MAX是在cstdlib文件中定义的，是rand()函数可能返回的最大值（0是最小值）。
+
+* 该方法详情见P472
+
+程序清单：
+
+* 示例：
+
+  * ```c++
+    // ch12_12_bank.cpp -- using the Queue interface
+    // compile with ch12_11_queue.cpp
+    #include <iostream>
+    #include <cstdlib>
+    #include <ctime>
+    #include "ch12_10_queue.h"
+    
+    const int MIN_PER_HR = 60;
+    
+    bool newcustomer(double x);
+    
+    int main()
+    {
+    	using std::cin;
+    	using std::cout;
+    	using std::endl;
+    	using std::ios_base;
+    // setting things up
+    	std::srand(std::time(0));		// random initializing of rand()
+    
+    	cout << "Case Study: Bank of Heather Automatic Teller\n";
+    	cout << "Enter maximum size of queue: ";
+    	int qs;
+    	cin >> qs;
+    	Queue line(qs);					// line queue holds up to qs people
+    
+    	cout << "Enter the number of simulation hours: ";
+    	int hours;
+    	cin >> hours;
+    	// simulation will run 1 cycle per minute
+    	long cyclelimit = MIN_PER_HR * hours;	// # of cycles
+    
+    	cout << "Enter the average number of customers per hour: ";
+    	double perhour;					// average # of arrival per hour
+    	cin >> perhour;
+    	double min_per_cust;			// average time between arrivals
+    	min_per_cust = MIN_PER_HR / perhour;
+    
+    	Item temp;						// new customer data
+    	long turnaways = 0;				// turned away by full queue
+    	long customers = 0;				// joined the queue
+    	long served = 0;				// served during the simulation
+    	long sum_line = 0;				// cumulative line length
+    	int wait_time = 0;				// time until autoteller is free
+    	long line_wait = 0;				// cumulative time in line
+    
+    // running the simulation
+    	for (int cycle = 0; cycle < cyclelimit; cycle++)
+    	{
+    		if (newcustomer(min_per_cust))
+    		{
+    			if (line.isfull())
+    				turnaways++;
+    			else
+    			{
+    				customers++;
+    				temp.set(cycle);	// cycle = time of arrival
+    				line.enqueue(temp);	// add newcomer to line
+    			}
+    		}
+    		if (wait_time <= 0 && !line.isempty())
+    		{
+    			line.dequeue(temp);		// attend next customer
+    			wait_time = temp.ptime(); // for wait_time minutes
+    			line_wait += cycle - temp.when();
+    			served++;
+    		}
+    		if (wait_time > 0)
+    			wait_time--;
+    		sum_line += line.queuecount();
+    	}
+    
+    // reporting results
+    	if (customers > 0)
+    	{
+    		cout << "customers accepted: " << customers << endl;
+    		cout << "  customers served: " << served << endl;
+    		cout << "         turnaways: " << turnaways << endl;
+    		cout << "average queue size: ";
+    		cout.precision(2);
+    		cout.setf(ios_base::fixed, ios_base::floatfield);
+    		cout << (double)sum_line / cyclelimit << endl;
+    		cout << " average wait time: "
+    			<< (double)line_wait / served << " minutes\n";
+    	}
+    	else
+    		cout << "No customers!\n";
+    	cout << "Done!\n";
+    	return 0;
+    }
+    
+    // x = average time, in minutes, between customers
+    // return value is true if customer shows up this minute
+    bool newcustomer(double x)
+    {
+    	return (std::rand() * x / RAND_MAX < 1);
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Case Study: Bank of Heather Automatic Teller
+    Enter maximum size of queue: 10
+    Enter the number of simulation hours: 100
+    Enter the average number of customers per hour: 15
+    customers accepted: 1533
+      customers served: 1533
+             turnaways: 0
+    average queue size: 0.16
+     average wait time: 0.62 minutes
+    Done!
+         
+    Case Study: Bank of Heather Automatic Teller
+    Enter maximum size of queue: 10
+    Enter the number of simulation hours: 100
+    Enter the average number of customers per hour: 30
+    customers accepted: 2928
+      customers served: 2923
+             turnaways: 57
+    average queue size: 3.94
+     average wait time: 8.09 minutes
+    Done!
+         
+    Case Study: Bank of Heather Automatic Teller
+    Enter maximum size of queue: 20
+    Enter the number of simulation hours: 100
+    Enter the average number of customers per hour: 30
+    customers accepted: 2969
+      customers served: 2956
+             turnaways: 25
+    average queue size: 8.80
+     average wait time: 17.82 minutes
+    Done!
+         
+    Case Study: Bank of Heather Automatic Teller
+    Enter maximum size of queue: 10
+    Enter the number of simulation hours: 4
+    Enter the average number of customers per hour: 30
+    customers accepted: 114
+      customers served: 110
+             turnaways: 10
+    average queue size: 5.96
+     average wait time: 12.87 minutes
+    Done!
+         
+    Case Study: Bank of Heather Automatic Teller
+    Enter maximum size of queue: 10
+    Enter the number of simulation hours: 4
+    Enter the average number of customers per hour: 30
+    customers accepted: 121
+      customers served: 115
+             turnaways: 1
+    average queue size: 4.08
+     average wait time: 8.01 minutes
+    Done!
+         
+    Case Study: Bank of Heather Automatic Teller
+    Enter maximum size of queue: 10
+    Enter the number of simulation hours: 4
+    Enter the average number of customers per hour: 30
+    customers accepted: 122
+      customers served: 114
+             turnaways: 0
+    average queue size: 4.60
+     average wait time: 9.09 minutes
+    Done!
+    ```
+
